k8s/applications/jackett/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: jackett
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jackett
          image: ghcr.io/linuxserver/jackett:version-v0.18.432
          ports:
            - name: jackett
              containerPort: 9117
          volumeMounts:
            - name: server
              mountPath: /config
              subPath: jackett
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
