k8s/applications/jackett/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackett
spec:
  type: ClusterIP
  ports:
    - name: jackett
      port: 9117
      targetPort: jackett
